--- a/p2.html
+++ b/p2.html
@@ -11,7 +11,7 @@
 	<ul>
   <li><a href="index.html">main page</a></li>
   <li><a href="p1.html">mobile computing introduction</a></li>
-  <li><a href="p2.html">- mobile computing table</a></li>
+  <li><a href="p2.html">mobile computing table</a></li>
    <li><a href="p3.html">mobile computing</a></li>
 </ul>
 
